# sales_pred

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
sales_pred_filiankova/: __init__.py
sales_pred_filiankova/analysis/: __init__.py  error_analysis.py  shap_explainer.py
sales_pred_filiankova/data/: DQC.py  ETL.py  __init__.py
sales_pred_filiankova/features/: __init__.py  feature_extractor.py  preprocessing.py
sales_pred_filiankova/models/: __init__.py  feature_selection.py  submission.py  train_model.py  tuning.py
src/analysis/: __init__.py
src/features/: feature_engineering.py  feature_extractor.py  preprocessing.py  validation_schema.py
src/models/: feature_selection.py
